# junos-rest

./: .flake8  .gitignore  LICENSE  README.md  cli.py  pyproject.toml
junos_rest/: __init__.py  actions.py  config.py  connection.py  constants.py  exceptions.py  log.py  parser.py  util.py
junos_rest/models/: config.py  device.py
